added austin's intro

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>My name is Austin Chang</p>
 
     <!-- Your GitHub user name -->
+    <p>My GitHub user name is achang0406
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is Javascript because I am the most familiar with it. My least favorite is definitely CSS cause formatting has been a bitch.</p>
 
   </body>
 </html>
