--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I'm hoping this works</p>
     <!-- Your name -->
+    <p>James Vaughan</p>
 
     <!-- Your GitHub user name -->
+    <p>jamesvaughan09</p>
     
     <!-- Your favorite coding language -->
+    <p>The one that works</p>
 
   </body>
 </html>
