--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Tuyen Chung</p>
     <!-- Your GitHub user name -->
-    
+    <p>tchungdojo</p>
     <!-- Your favorite coding language -->
-
+    <p>so far, if terminal is a language then its my favorite</p>
   </body>
 </html>
