--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,16 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>
+      Penn State 2018
+      Information Sciences and Techonology major
+      From China
+    </p>
     <!-- Your name -->
-
+    <h2>Bingyao Li</h2>
     <!-- Your GitHub user name -->
-    
+    joylibingyao
     <!-- Your favorite coding language -->
-
+    Ruby
   </body>
 </html>
