test edits completed

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,16 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>Name</h2>
+    <p>Matt Jennings</p>    
 
     <!-- Your GitHub user name -->
-    
+    <h2>GitHub Username</h2>
+    <p>Hollyw00d</p>    
+
     <!-- Your favorite coding language -->
+    <h2>Favorite Coding Language</h2>
+    <p>JavaScript, specifically jQuery and AngularJS</p>
 
   </body>
 </html>
