Some change on git_demo

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    Minsu Kim
     <!-- Your GitHub user name -->
-    
+    Bravo Minski
     <!-- Your favorite coding language -->
-
+    Java for now, but obviously PHP and Javascripts are really getting interesting!
   </body>
 </html>
