--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Drake Wempe</h3>
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <h4>wemped</h4>
+    <!-- Your favorite coding languages -->
+    <h4>Java and C</h4>
   </body>
 </html>
