--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Molly</p>
     <!-- Your GitHub user name -->
-    
+    <p>My username is Ostheller</p>
     <!-- Your favorite coding language -->
-
+    <p>I don't know any coding languages yet!</p>
   </body>
 </html>
