Added Personal Information
Added personal information in the form of three paragraphs.

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>A little about myself, I grew up in upstate NY, moved around a bit but ended up settling in the Seattle are after serving in the Marine Corps. I hope to start a career in Web Applications Development</p>
     <!-- Your name -->
+    <p>Dan Burke</p>
 
     <!-- Your GitHub user name -->
+    <p>dandocalrizian</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language thus far is Javascript.</p>
 
   </body>
 </html>
