--- a/demo_index.html
+++ b/demo_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Git Demo Index Page</title>
+    <title>Modified Git Demo Index Page</title>
   </head>
   <body>
     <h1>Git Demo</h1>
