added html content

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,19 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Top three reasons I procrastinate</p>
+    <ol>
+      <li>I</li>
+      <li></li>
+      <li></li>
+    </ol>
     <!-- Your name -->
+    <p>Preston Phan aka PeeStain</p>
 
     <!-- Your GitHub user name -->
+    <a href="https://github.com/Eggsix/">Eggsix</a>
     
     <!-- Your favorite coding language -->
-
+    <p>Javascript</p>
   </body>
 </html>
