--- a/demo_index.html
+++ b/demo_index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
   <head>
     <title>Git Demo Index Page</title>
   </head>
@@ -7,11 +5,8 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Your name --Theodore Anderson
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <!-- Your GitHub user name -->andersontr15
   </body>
 </html>
