made changes to demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    Ray Olaga
     <!-- Your GitHub user name -->
-    
+    yourdesignbuddy    
     <!-- Your favorite coding language -->
+    php cause that's the only one I know a little bit off hehe..
 
   </body>
 </html>
