--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hello!</p>
     <!-- Your name -->
-
+    <p>I'm Lan Nguyen.</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub account is lannng.</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is Javascript.</p>
   </body>
 </html>
