--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h2>Name: Mia Clapham</h2>
 
-    <!-- Your GitHub user name -->
+    <h3>Github: MightyMia</h3>
     
-    <!-- Your favorite coding language -->
+    <p>Favorite Language: Python</p>
 
   </body>
 </html>
