--- a/demo_index.html
+++ b/demo_index.html
@@ -13,6 +13,6 @@
     <!-- Your GitHub user name -->
     <p>My GitHub account is lannng.</p>
     <!-- Your favorite coding language -->
-    <p>My favorite coding language is Javascript.</p>
+    <p>My favorite coding language is Javascript!</p>
   </body>
 </html>
