--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>I am in the process of becoming a codo dojo ninja and I am very estatic about the whole experience.</p>
+    <p>Lin Peng</p>
+    <p>Github username: Gonewindy</p>
+    <p>I hope it will be C++</P>
   </body>
 </html>
