--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,20 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <table>
+      <tr>
+        <td>Name:</td><td>Anthony Poblacion</td>
+      </tr>
+      <tr>
+        <td>GitHub username:</td><td>StBean</td>
+      </tr>
+      <tr>
+        <td>Favorite coding language:</td><td>JavaScript</td>
+      </tr>
+    </table>
 
   </body>
 </html>
+
+
+
