added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h2>My name is JP</h2>
 
-    <!-- Your GitHub user name -->
+    <p>My GitHub user name is jipsy009</p>
     
-    <!-- Your favorite coding language -->
+    <p>My favorite coding language so far is html lol</p>
 
   </body>
 </html>
