--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,12 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>My name is Derek, I was previously a paralegal before I wanted to become a programmer. </p>
+    Derek Nasawang
 
-    <!-- Your GitHub user name -->
+    Nasawangd
     
-    <!-- Your favorite coding language -->
+    My favorite coding language so far is JavaScript
 
   </body>
 </html>
