--- a/demo_index.html
+++ b/demo_index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Git Demo Index Page</title>
+    <link rel="stylesheet" type = "text/css" href = "style.css">
+    
   </head>
   <body>
     <h1>Git Demo</h1>
