--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>Name: Darrick Chung</h1>
 
     <!-- Your GitHub user name -->
-    
+    <h2>GitHub user name: chungsquared</h2>
     <!-- Your favorite coding language -->
-
+    <h3>Favorite coding language: Javascript</h3>
   </body>
 </html>
