Updated demo_index with my info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h3>Isaac Lee</h3>
 
     <!-- Your GitHub user name -->
+    <h4>My GitHub user name is ilee!</h4>
     
     <!-- Your favorite coding language -->
+    <h4>My favorite coding language (so far) is probably Java, followed by C99.</h4>
 
   </body>
 </html>
