--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
-    <!-- Your GitHub user name -->
+    <p>Steven Huynh</p>
+    <p>steven5210</p><!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    <p>Ruby</p><!-- Your favorite coding language -->
 
   </body>
 </html>
