Customize the page

--- a/demo_index.html
+++ b/demo_index.html
@@ -13,5 +13,7 @@
     
     <!-- Your favorite coding language -->
 
+    <!-- Rodney's customization -->
+    <p>This is where we put customizations other people can pick up</p>    
   </body>
 </html>
