--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h2>Michael Campos</h2>
 
     <!-- Your GitHub user name -->
+    <h2>mjcampos</h2>
     
     <!-- Your favorite coding language -->
+    <h2>Ruby, for Ruby on Rails</h2>
 
   </body>
 </html>
