--- a/demo_index.html
+++ b/demo_index.html
@@ -5,7 +5,12 @@
   </head>
   <body>
     <h1>Git Demo</h1>
+    <h2>This is Oshry's change!</h2>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>It was SO hot today, but I resisted the temptetion, did NOT go to the pool and worked on GitHub. Hooray!</p>
+    <p>Oshry Rabinovitch</p>
+    <p>osh-rab</p>
+    <p>JS!!</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
