add personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,16 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>This is our test repository to test forking a repository and sending a
+       pull request back to make changes to the original</p>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <ul>
+      <li>Timothy Shiu</li>
+      <li>https://github.com/timoweave</li>
+      <li>favorite language python, browser should use it with
+      async extension/module instead of javascript with all these
+      ecma script 1-5...</li>
+    </ul>
 
   </body>
 </html>
