added personal information

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+<h1>Mark Donahue</h1>
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+    <h2>mdonagh</h2>
     <!-- Your favorite coding language -->
-
+    <h3>Favorite Coding Language: JQuery</h3>
   </body>
 </html>
