fixed user name

--- a/demo_index.html
+++ b/demo_index.html
@@ -10,7 +10,7 @@
     <!-- Your name -->
     <p>Sean Suyeda</p>
     <!-- Your GitHub user name -->
-    <p>Suyeda422</p>
+    <p>Suyeda</p>
     <!-- Your favorite coding language -->
     <p>Ruby!</p>
   </body>
