--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,6 @@
     <!-- Your GitHub user name -->
     	<p>ivanau12</p>
     <!-- Your favorite coding language -->
-	<p>Java</p>
+	<p>Java...I think</p>
   </body>
 </html>
