--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
+   I'm a world class shitposter
+ <!-- Your name -->
+kyle koerber
     <!-- Your GitHub user name -->
-    
+    Kzip
     <!-- Your favorite coding language -->
-
+    javascript and C
   </body>
 </html>
