added some information to jjun14's index.html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,10 @@
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
+    <p>name: Nick Rodriguez</p>
 
+    <p>github name: ghettocow</p>
+
+    <p>fav. language: hopefully python :p</p>
   </body>
 </html>
