--- a/demo_index.html
+++ b/demo_index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>This is Sang and I've done this assignment</p>
+    <h1>Optimus Prime!</h1>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
