--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Your name --> Quan Nguyen
 
-    <!-- Your GitHub user name -->
+    <!-- Your GitHub user name --> minhwebc
     
-    <!-- Your favorite coding language -->
+    <!-- Your favorite coding language --> Java
 
   </body>
 </html>
