added personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Git Demo Index Page</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Darwin Smith II</h1>
     <!-- Your GitHub user name -->
-    
+    <h3>GitHub username: dsjr2006</h3>
     <!-- Your favorite coding language -->
-
+    <p>Favorite programming language is Javascript so far, but to be determined.</p>
   </body>
 </html>
