--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I like dinosaurs and robots :)</p>
     <!-- Your name -->
+    <p>My name is Stella</p>
 
     <!-- Your GitHub user name -->
+    <p>My Git user name is StellarBelle</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is Python!</p>
 
   </body>
 </html>
