--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Leilani Raranga-->
 
-    <!-- Your GitHub user name -->
+    <!-- LeilaniAnn -->
     
-    <!-- Your favorite coding language -->
+    <!-- Ruby on Rails -->
 
   </body>
 </html>
