--- a/demo_index.html
+++ b/demo_index.html
@@ -7,9 +7,9 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+      Andrew Wibel
 
-    <!-- Your GitHub user name -->
+      AndrewWibel
     
     <!-- Your favorite coding language -->
 
