--- a/demo_index.html
+++ b/demo_index.html
@@ -7,6 +7,7 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>hello world</p>
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
