Added personal text
Added name, GitHub user name, and favorite coding language to html file.

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>Stephanie Mehlhope</h1>
 
     <!-- Your GitHub user name -->
+    <h2>GitHub user name: smehlhope</h2>
     
     <!-- Your favorite coding language -->
+    <h3>Favorite coding language (so far): JS!</h3>
 
   </body>
 </html>
