--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <h2>Name</h2>
+    <p>David Wolgemuth</p>
+    <h2>GitHub Username</h2>
+    <p>David-Wolgemuth</p>
+    <h2>Favorite Language</h2>
+    <p>Python</p>
   </body>
 </html>
