added some html about myself

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I love learning how to code and the Coding Dojo rocks!</p>
     <!-- Your name -->
-
+    <p>Anthony Austin-Walker</p>
     <!-- Your GitHub user name -->
-    
+    <p>aawalker238</p>
     <!-- Your favorite coding language -->
-
+    <p>Not sure yet!</p>
+    <p>I used to use Komodo edit as my text editor, but took the advice of Coding Dojo to use Sublime and I am sooooooooo thankful I did.</p>
   </body>
 </html>
