--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,16 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <table>
+		<tr>
+			<th>Name</th>
+			<th>Github Username</th>
+			<th>Favorite Coding Language</th>
+		</tr>
+		<tr>
+			<td>Sinh</td>
+			<td>HyperbolicSine</td>
+			<td>Java</td>
+		</tr>
   </body>
 </html>
