--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Name: Kelly Howard</h3>
     <!-- Your GitHub user name -->
-    
+    <h3>GitHub User Name: kellybhoward</h3>
     <!-- Your favorite coding language -->
-
+    <h3>Favorite Language: Javascript!</h3>
   </body>
 </html>
