Added information about myself to html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+	<h2>Dylan Sharkey</h2>
     <!-- Your GitHub user name -->
-    
+    <h3>Serghar</h3>
     <!-- Your favorite coding language -->
-
+	<h3>C# or Python</h3>
   </body>
 </html>
