--- a/demo_index.html
+++ b/demo_index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <h2>Hi my name is Geneva and I am making changes to this file to send a pull request.</h2>
+    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original.</p>
+
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
