--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Rene Chen<!-- Your name -->
 
-    <!-- Your GitHub user name -->
+
+    Renejchen<!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    Javascript<!-- Your favorite coding language -->
 
   </body>
 </html>
