Added Personal Info

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Renee Riggins</p>
 
     <!-- Your GitHub user name -->
+    <p>rariggins</p>
     
     <!-- Your favorite coding language -->
+    <p>Don't really have a favorite yet. OmniMark is the coding language I have used the most in my career.</p>
 
   </body>
 </html>
