changed favorite coding language

--- a/demo_index.html
+++ b/demo_index.html
@@ -12,6 +12,6 @@
     <!-- Your GitHub user name -->
     <!-- TEnders64 -->
     <!-- Your favorite coding language -->
-    <!-- Java -->
+    <!-- Ruby -->
   </body>
 </html>
