--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Conrad Wong</p>
     <!-- Your GitHub user name -->
-    
+    <p>GitHub user name: conrad300</p>
     <!-- Your favorite coding language -->
+    <p>Favorite coding language: don't know yet</p>
 
   </body>
 </html>
