put in my information

--- a/demo_index.html
+++ b/demo_index.html
@@ -10,8 +10,10 @@
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
+    <p>wheetabixs</p>
     
     <!-- Your favorite coding language -->
+    <p>unsure as of now.</p>
 
   </body>
 </html>
