Added info to the HTML file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I'm from Montana but lived in the SF Bay Area before moving to Western WA</p>
     <!-- Your name -->
-
+    <p>My name is Allen</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub username is ajczerwinski    
     <!-- Your favorite coding language -->
-
+    <p>so far, JavaScript!</p>
   </body>
 </html>
