--- a/demo_index.html
+++ b/demo_index.html
@@ -11,7 +11,7 @@
     <!-- Your name -->
     <p>My name is Allen</p>
     <!-- Your GitHub user name -->
-    <p>My GitHub username is ajczerwinski    
+    <p>My GitHub username is ajczerwinski</p>
     <!-- Your favorite coding language -->
     <p>so far, JavaScript!</p>
   </body>
