echwang-live modification

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+	<h1>EricW was here</h1>
     <!-- Your GitHub user name -->
-    
     <!-- Your favorite coding language -->
-
+	<p>GitHub username echwang-live</p><br>
+    <p>Favorite programming language - anything that doesn't involve the compiler</p>
   </body>
 </html>
