updated html file with my personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hey what's up my name is Calvin Hemington</p>
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
+    <p>My github user account name is hemingto</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is jQuery</p>
 
   </body>
 </html>
