--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Chongchong Wang.</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is CcWang.</p>
     <!-- Your favorite coding language -->
-
+    <p>I just start to learn coding. I've learnt HTML CSS JavaScript and Ruby so far. They are my favorite coding languages!</p>
   </body>
 </html>
