--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h2>Maric Sobreo</h2>
     <!-- Your GitHub user name -->
-    
+    <p>mehrik</p>
     <!-- Your favorite coding language -->
-
+    <p>I have not used it yet, but I am very excited to learn python!</p>
   </body>
 </html>
