--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>My name is Eric Tran I love playing basketball, fishing, and hiking.</p>
+    <p>My username is Eric-Tran on GitHub</p>
+    <p>So far the only language I have experience with is javascript so that would be my favorite!</p>
 
   </body>
 </html>
