--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p> afjlfjsaldfjlsakjflkasjdlfkjalskjfsdjflajdsflkjalskdjfla </p>
     <!-- Your name -->
-
+    <p> Christian Martinez-Carranza </p>
     <!-- Your GitHub user name -->
-    
+    <p> bladimirror </p>
     <!-- Your favorite coding language -->
-
+    <p> TBD </p>
   </body>
 </html>
