--- a/demo_index.html
+++ b/demo_index.html
@@ -6,9 +6,9 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
+     <p>Joshua</p>!-- Add some information about yourself below -->
+    <p>5T3V3M1N3GUY</p>-- Your name -->
+    <p>Python</p>
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
