Added personal information to demo file.

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Marnelli Jabonero</p>
     <!-- Your GitHub user name -->
-    
+    <p>Myxsis</p>
     <!-- Your favorite coding language -->
-
+    <p>HTML and CSS, followed by Python and Javascript!</p>
   </body>
 </html>
