--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I love the Sounders.  I love theatre and I love to code!!!</p>
     <!-- Your name -->
-
+    <p>Colin McKenna</p>
     <!-- Your GitHub user name -->
-    
+    <p>Colin McKenna</p>
     <!-- Your favorite coding language -->
-
+    <p>Ruby</p>
   </body>
 </html>
