--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,13 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <!-- Add some information about yourself below -->
+    <!-- Your name --> Kenrick Williams
+
+    <!-- Your GitHub user name --> kjwill2499
     
-    <!-- Your favorite coding language -->
+    <!-- Your favorite coding language -->JAVA, oldie but a goodie
 
   </body>
 </html>
