--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Mi llamo es Daniel (not sure if my spanish spelling is correct)</p>
 
     <!-- Your GitHub user name -->
+    <p> My GitHub username is DannSer. That's something I will stand by.</p>
     
     <!-- Your favorite coding language -->
+    <p>My favorite coding language is CSS.</p>
 
   </body>
 </html>
