added my personal information

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,16 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+	-I like cheesecake, and everything related to eating and drinking coconuts
+	-I live in Seattle
     <!-- Your name -->
+	-Jesse Naldo
 
     <!-- Your GitHub user name -->
+	-naldojesse@gmail.com
     
     <!-- Your favorite coding language -->
+	-No current favorite coding language
 
   </body>
 </html>
