--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+
+    <p>Kelin Christi</p>
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
+    <p>crikeli</p>
     
     <!-- Your favorite coding language -->
+    <p>torn between python and swift</p>
 
   </body>
 </html>
