Added information about myself

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I'm a 911 Dispatcher, Photographer, and WebDeveloper. My hobbies include programming, playing sports, and fine tuning my skills in photography. I'm a student at CodingDojo who plans to add to their success stories.</p>
     <!-- Your name -->
+    <p>Jose Chery</p>
 
     <!-- Your GitHub user name -->
+    <p>Jcareergoals</p>
     
     <!-- Your favorite coding language -->
+    <p>JavaScript</p>
 
   </body>
 </html>
