changes to forked html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Well, my name is Holly Zbitowsky, BUT I go by Rylin</p>
     <!-- Your GitHub user name -->
-    
+    <p>That is why my GitHub user name is rylinzbit</p>
     <!-- Your favorite coding language -->
+    <p>Not too sure at the moment. I find it all very interesting.I like html because I think it is easy. I like the creativity from CSS, but I find it challenging.</p>
 
   </body>
 </html>
