--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h2>Timmey Ellefson</h2>
 
-    <!-- Your GitHub user name -->
+    <p>Tellefsonjr</p>
     
-    <!-- Your favorite coding language -->
+    <p>So far, Git's been the easiest to grasp onto ^^, <br/> however, I've always liked python for its readability.</p>
 
   </body>
 </html>
