--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Filza Mazahir</p>
     <!-- Your GitHub user name -->
-    
+    <p>filzamazahir</p>
     <!-- Your favorite coding language -->
-
+    <p>Not sure about that one so far! Need to learn more to have a favorite!</p>
   </body>
 </html>
