added paragraphs about myself.

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+	<p> my name is Shu Han Ng. I am learing to use Git and i like it a lot.</p>
     <!-- Your name -->
-
+	<p> just said it above</p>
     <!-- Your GitHub user name -->
-    
+    <p> ngshuhan </p>
     <!-- Your favorite coding language -->
-
+	<p> C </p>
   </body>
 </html>
