made some changes

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    Hello, I love chipotle
     <!-- Your name -->
-
+    Eddie
     <!-- Your GitHub user name -->
-    
+    leddie24
     <!-- Your favorite coding language -->
-
+    Javascript
   </body>
 </html>
