--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>This is some information about myself below the requoired line: hair - blk</p>
     <!-- Your name -->
-
+    <p>my name is Necholas</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is Necholasg</p>
     <!-- Your favorite coding language -->
-
+    <p>easy, I only know one so far and thats HTML/CSS</p>
   </body>
 </html>
