added my name, github username, and favorite coding language

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Brian Eddow
 
     <!-- Your GitHub user name -->
+    brianeddow
     
     <!-- Your favorite coding language -->
+    I learned mainly in Ruby, but I'm comfortable with JavaScript and Python too.
 
   </body>
 </html>
