--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,18 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>I mean really.....did this person(s) creating these commands KNOW what they were doing? Most of these terms have...hmmhmm...sexual connotation.<p>
+    <h3>Here are a few such (inappropriate) examples:</h3>
+    <ul>
+      <li>Forking</li>
+      <li>Git InIt</li>
+      <li>Fork and Pull</li>
+      <li>Fetch</li>
+      <li>Reverting</li>
+    </ul>
+    <p>Okay...well now that I think of it....I might be 100% wrong about that. The important thing is that I understand these....hmmmhmmm.....Forking and Pulling techniques. They will likely be value to know in the future.</p>
+    <p>Dale K</p>     <!-- Your name -->
+    <p>vdalek</p>    <!-- Your GitHub user name -->
+    <p>So far I like CSS. It proves to be powerful in manipulating regular text and making it visually compelling. <p>  <!-- Your favorite coding language -->
   </body>
 </html>
