--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Hi I am a Coding Dojo student</p>
     <!-- Your name -->
-
+    <p>My name is Eric Lee</p>
     <!-- Your GitHub user name -->
-    
+    <p>bombjester</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is html so far</p>
   </body>
 </html>
