added name, username, and fav coding language

--- a/demo_index.html
+++ b/demo_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ git_demo<!DOCTYPE html>
 <html>
   <head>
     <title>Git Demo Index Page</title>
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+
     <!-- Your name -->
-
+    <p>Thomas Evans</p>
     <!-- Your GitHub user name -->
-    
+    <p>tme41581</p>
     <!-- Your favorite coding language -->
-
+    <p>I'm too new to coding to know my favorite language but hope to learn enough soon enough to be able to say!</p>
   </body>
 </html>
