added personal information for responses

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>Orion Supergan</p>
     <!-- Your GitHub user name -->
-    
+    <p>OrionSuperman@gmail.com</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite programming language so far is Java. So far of the programming languages I've learned (Php, C++, Java) it syncs with how I think when coding the most.</p>
   </body>
 </html>
