--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <p>My name is Heather Walker</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is cookiesncream716</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is html/css but they are the only ones I have much experience with.  Soon I will know more languages.</p>
   </body>
 </html>
