--- a/demo_index.html
+++ b/demo_index.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
+
+    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>this is going to be my fisrt fork and pull </p><!-- Add some information about yourself below --> 
+
+    <h2>Antnisfk</h2><!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
 
