--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>Yay Area local who enjoys coding</p>
     <!-- Your name -->
-
+    <p>Clifford Wright</p> 
     <!-- Your GitHub user name -->
-    
+    <p>CWright777</p>
     <!-- Your favorite coding language -->
-
+    <p>Ruby</p>
   </body>
 </html>
