demo_index.html

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,14 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>My name is Chad Fegley!</h1>
+    <p>I will be attending Coding Dojo Jan. 4th in San Jose. I can't wait to see all the cool things we are going to learn, just from this 1st track of Web Fundamentals I enjoy coding soo much!</p>
 
     <!-- Your GitHub user name -->
+    My GitHub username is: chadfegley7
     
     <!-- Your favorite coding language -->
+    My favorite coding language so far has to be the jQuery UI because it has soo many cool features and I've only barely scratched the surface.
 
   </body>
 </html>
