made some changes to the html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,14 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    A student at coding dojo working on this assignment.
     <!-- Your name -->
+    Kimberly Liu
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    kLiuGit
 
+    <!-- Your favorite coding language -->
+    JavaScript
   </body>
 </html>
