Updated demo_index with personal info

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h3>Your Name: David Macias</h3>
 
-    <!-- Your GitHub user name -->
+    <h3>GitHub Username: dmacstack</h3>
     
-    <!-- Your favorite coding language -->
+    <h3>Your favorite coding language: Javascript (for now)</h3>
 
   </body>
 </html>
