--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,7 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+   <h2>Hello my name is Barclay. I am editing this file for fun. I don't know what my favorite language is yet because I need to learn some more! I am really enjoying this coding course though and hope that I can become skilled enough to build cool things!</h2>
 
   </body>
 </html>
