added a little about me

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,13 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p> Before coming to coding dojo I was working in a restaurant!</p>
     <!-- Your name -->
-
+    <p> My name is Eric for short.
     <!-- Your GitHub user name -->
+    <p> Rmatammu
     
     <!-- Your favorite coding language -->
-
+    <p>I'm still very much a novice in most lanaguages but Ruby seemed simplier than Java.</p>
   </body>
 </html>
