added personal information

--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,14 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original.</p>
     <!-- Add some information about yourself below -->
+
     <!-- Your name -->
-
+    <p>Yaeyoung Rigby</p>
     <!-- Your GitHub user name -->
-    
+    <p>yyrigby</p>
     <!-- Your favorite coding language -->
-
+    <p>python</p>
   </body>
 </html>
