I have made changes to the demo_index.html --> Included my additional information

--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,13 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    Zubin Talib
 
     <!-- Your GitHub user name -->
+    zubintalib@izooky.com
     
     <!-- Your favorite coding language -->
+    JQuery!
 
   </body>
 </html>
