--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h4>Hannah Kelley</h4>    
     <!-- Your GitHub user name -->
-    
+    <h5>hannahkelley</h5>
     <!-- Your favorite coding language -->
-
+    <h6>html/css</h6>
   </body>
 </html>
