Added information requested in html file

--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Your name:  Eliott Davidson--> 
 
-    <!-- Your GitHub user name -->
+    <!-- Your GitHub user name:  ERDavidson -->
     
-    <!-- Your favorite coding language -->
+    <!-- Your favorite coding language: I had no idea what I wanted to do with my life before I met Python.  I still have no idea, but I like Python anyway. -->
 
   </body>
 </html>
